--- a/jarvice.config
+++ b/jarvice.config
@@ -1,6 +1,11 @@
 process {
-    executor='jarvice'
-    pollInterval='10 sec'
-    dumpInterval='10 sec'
-    queueStatInterval='10 sec'
+    executor = 'jarvice'
+}
+
+executor {
+    queueSize = 100
+    queueStatInterval = '3 sec'
+    pollInterval = '3 sec'
+    dumpInterval  = '3 sec'
+    exitReadTimeout = '5 sec'
 }
