--- a/app-helper/NAE/AppDef.json
+++ b/app-helper/NAE/AppDef.json
@@ -1,60 +1,60 @@
 {
-    "name": "Nextflow Helper",
-    "description": "Nextflow control node",
-    "author": "Nimbix, Inc.",
+    "name": "Nextflow Shell",
+    "description": "Nextflow environment preconfigured with jarvice support",
+    "author": "Nimbix",
     "licensed": true,
-    "classifications": [
-        "Software Development"
-    ],
-    "machines": [
-        "*"
-    ],
-    "vault-types": [
-        "FILE"
-    ],
+    "appdefversion": 2,
+    "classifications": ["Computational Biology"],
+    "machines": ["*"],
+    "vault-types": ["FILE"],
     "commands": {
-        "Batch": {
-            "path": "/bin/bash",
-            "interactive": true,
-            "name": "Batch",
-            "description": "Run a batch command using /bin/bash.  The output may be monitored directly in your web browser.",
+        "nextflow_shell": {
+            "path": "/opt/jarvice-nf/launch.sh",
+            "webshell": true,
+            "interactive": false,
+            "publicip": false,
+            "name": "Jarvice Nextflow Shell",
+            "description": "Start a gotty shell into the Jarvice Nextflow environment",
             "parameters": {
-                "-l": {
-                    "name": "-l",
-                    "description": "-l",
+                "-APIURL": {
+                    "name": "-APIURL",
+                    "description": "APIURL",
                     "type": "CONST",
-                    "value": "-l",
-                    "positional": true,
+                    "value": "%APIURL%",
+                    "positional": false,
                     "required": true
                 },
-                "-c": {
-                    "name": "-c",
-                    "description": "-c",
+
+                "-APIUSER": {
+                    "name": "-APIUSER",
+                    "description": "APIUSER",
                     "type": "CONST",
-                    "value": "-c",
-                    "positional": true,
+                    "value": "%APIUSER%",
+                    "positional": false,
                     "required": true
                 },
-                "command": {
-                    "name": "Command",
-                    "description": "Command to run",
+
+                "-APIKEY": {
+                    "name": "-APIKEY",
+                    "description": "APIKEY",
                     "type": "CONST",
-                    "value": "/bin/sleep 1d",
-                    "positional": true,
+                    "value": "%APIKEY%",
+                    "positional": false,
                     "required": true
+                },
+
+                "-DOCKER_CREDS": {
+                    "name": "-DOCKER_CREDS",
+                    "description": "Docker credentials to pull container images (user:password)",
+                    "type": "STR",
+                    "positional": false,
+                    "required": false
                 }
             }
-        },
-        "Server": {
-            "path": "/sbin/init",
-            "interactive": true,
-            "name": "Server",
-            "description": "Launch a session with all boot services, including SSH (if installed).  Connection address and credentials will appear in your web browser once available.",
-            "parameters": {}
         }
     },
     "image": {
-        "type": "",
-        "data": ""
+        "data": "",
+        "type": ""
     }
 }
