Add vault support and upload

--- a/app-helper/Dockerfile
+++ b/app-helper/Dockerfile
@@ -15,10 +15,10 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get -y install default-jre
 
 RUN java -version
 
-COPY nextflow/build/releases/nextflow-22.11.0-edge-all /opt/jarvice-nf/nextflow
+COPY nextflow /opt/jarvice-nf/nextflow
 
 WORKDIR /opt
-COPY jarvice-nxf-submit-batch jarvice-nxf-qstatus jarvice-nxf-kill jarvice.config jarvice-nf-run.sh launch.sh /opt/jarvice-nf/
+COPY jarvice-nxf-submit-batch jarvice-nxf-qstatus jarvice-nxf-kill jarvice.config jarvice-nf-run.sh launch.sh launch_upload.sh /opt/jarvice-nf/
 RUN ls -la /opt/jarvice-nf
 ENV PATH="$PATH:/opt/jarvice-nf"
 
